--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.2.0
   iconsax: ^0.0.8
+  rate_my_app: ^1.1.3
 
 dev_dependencies:
   flutter_test:
