app name and bundleID changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nuriddinburkhonov.bmicalculator">
+    package="com.example.bmi_fixer">
    <application
         android:label="BMI calculator"
         android:name="${applicationName}"
