onto signing the app

--- a/android/key.properties.properties
+++ b/android/key.properties.properties
@@ -1,4 +1,4 @@
-storePassword=<password from previous step>
-keyPassword=<password from previous step>
+storePassword=sadioMane#10
+keyPassword=sadioMane#10
 keyAlias=upload
 storeFile=<location of the key store file, such as /Users/<user name>/upload-keystore.jks>
